# laravel-admin/app/Http/Controllers/AuthController.php
@@ -57,6 +57,19 @@ class AuthController extends Controller
         ], Response::HTTP_OK)->withCookie($cookie);
     }
 
+    /**
+     * @OA\Put(path="/users/info",
+     *     security={{"bearerAuth":{}}},
+     *     tags={"Profile"},
+     *     @OA\Response(response="202",
+     *         description="User Info Update" 
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(ref="#/components/schemas/UpdateInfoRequest")
+     *     )
+     * )
+     */
     public function updateInfo(UpdateInfoRequest $request)
     {
         $user = $request->user();
@@ -72,6 +85,19 @@ class AuthController extends Controller
         return response(new UserResource($user), Response::HTTP_ACCEPTED);
     }
 
+    /**
+     * @OA\Put(path="/users/password",
+     *     security={{"bearerAuth":{}}},
+     *     tags={"Profile"},
+     *     @OA\Response(response="202",
+     *         description="User Password Update" 
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(ref="#/components/schemas/UpdatePasswordRequest")
+     *     )
+     * )
+     */
     public function updatePassword(UpdatePasswordRequest $request)
     {
         $user = $request->user();
@@ -83,6 +109,15 @@ class AuthController extends Controller
         return response(new UserResource($user), Response::HTTP_ACCEPTED);
     }
 
+    /**
+     * @OA\Get(path="/user",
+     *     security={{"bearerAuth":{}}},
+     *     tags={"Profile"},
+     *     @OA\Response(response="200",
+     *         description="Authenticated User" 
+     *     )
+     * )
+     */
     public function user(Request $request)
     {
         $user = $request->user();
